--- a/pages/subpages/mall/goods/subpages/order-check/index.wxml
+++ b/pages/subpages/mall/goods/subpages/order-check/index.wxml
@@ -15,7 +15,7 @@
     <view class="menu" wx:if="{{goodsDeliveryMode === 3}}">
       <view 
         class="menu-item {{curMenuIdx === index ? 'active' : ''}}"
-        wx:for="{{['物流配送', '到店自取/消费']}}" 
+        wx:for="{{['物流配送', '到店自提']}}" 
         wx:key="index" 
         bindtap="selectMenu" 
         data-index="{{index}}"
@@ -46,16 +46,13 @@
             </view>
             <image class="change-arrow" src="/images/arrow_black.png" />
           </view>
-          <view class="pickup-address-detail-wrap row" wx:if="{{pickupAddressList[curPickupAddressIdx].name}}">
-            <image class="pickup-address-icon" src="./images/address_gray.png" />
-            <view class="pickup-address-detail omit single">
-              {{pickupAddressList[curPickupAddressIdx].addressDetail}}
-            </view>
+          <view class="pickup-address-detail omit single" wx:if="{{pickupAddressList[curPickupAddressIdx].name}}">
+            {{pickupAddressList[curPickupAddressIdx].addressDetail}}
           </view>
         </view>
         <view class="distance-info-wrap" bindtap="navigation">
           <view class="distance-info row">
-            <view>距您{{pickupAddressList[curPickupAddressIdx].distance}}km</view>
+            <view>距您{{pickupAddressList[curPickupAddressIdx].distance}}</view>
             <image class="distance-arrow" src="/images/arrow_black.png" />
           </view>
           <view class="pickup-address-logo-wrap">
@@ -65,7 +62,7 @@
       </view>
       <view class="pickup-info-wrap">
         <view class="pickup-info" bindtap="showPickupTimePopup">
-          <view class="pickup-info-title">自取时间</view>
+          <view class="pickup-info-title">自提时间</view>
           <view class="pickup-info-detail">
             <view class="pickup-time">{{pickupTime ? TIME.transform(pickupTime, 'YYYY-MM-DD hh:mm') : '未选择'}}</view>
             <image class="pickup-info-arrow" src="./images/arrow.png" />
