--- a/pages/subpages/mine/utils/order.wxs
+++ b/pages/subpages/mine/utils/order.wxs
@@ -13,15 +13,31 @@ function statusDesc(status) {
   } else if (status === 301) {
     desc = "待收货";
   } else if (status === 302) {
-    desc = "待使用";
-  } else if (
-    status === 401 ||
-    status === 402 ||
-    status === 403 ||
-    status === 501 ||
-    status === 502
-  ) {
+    desc = "待自提";
+  } else if (status === 401 || status === 402 || status === 403) {
+    desc = "待评价";
+  } else if (status === 501 || status === 502) {
     desc = "交易成功";
+  }
+  return desc;
+}
+
+function statusDescForShop(status) {
+  var desc = "";
+  if (status === 201 || status === 202) {
+    desc = "待发货";
+  } else if (status === 203) {
+    desc = "待退款";
+  } else if (status === 204) {
+    desc = "已退款";
+  } else if (status === 301) {
+    desc = "待收货";
+  } else if (status === 302) {
+    desc = "待自提";
+  } else if (status === 401 || status === 402 || status === 403) {
+    desc = "已确认";
+  } else if (status === 501 || status === 502) {
+    desc = "已评价";
   }
   return desc;
 }
@@ -47,5 +63,6 @@ function paymentDesc(status) {
 
 module.exports = {
   statusDesc: statusDesc,
+  statusDescForShop: statusDescForShop,
   paymentDesc: paymentDesc
 };
