--- a/pages/subpages/mine/merchant/components/goods-order-item/index.wxml
+++ b/pages/subpages/mine/merchant/components/goods-order-item/index.wxml
@@ -7,7 +7,7 @@
       <view class="user-name omit single">{{item.userInfo.nickname}}</view>
       <image style="width: 20rpx; height: 20rpx;" src="/images/arrow_gray.png" />
     </view>
-    <view class="order-status">{{ORDER.statusDesc(item.status)}}</view>
+    <view class="order-status">{{ORDER.statusDescForShop(item.status)}}</view>
   </view>
   <view class="list-content">
     <goods-list list="{{item.goodsList || []}}" />
@@ -33,19 +33,19 @@
       <button class="btn" catchtap="navToDetail" hover-class="none">查看详情</button>
       <button 
         class="btn active" 
-        wx:if="{{item.status === 201 && item.deliveryMode === 1}}" 
-        catchtap="ship" 
-        hover-class="none"
-      >
-        发货
-      </button>
-      <button 
-        class="btn active" 
         wx:if="{{item.status === 201 || item.status === 202 || item.status === 302}}" 
         catchtap="refund" 
         hover-class="none"
       >
         退款
+      </button>
+      <button 
+        class="btn active" 
+        wx:if="{{item.status === 201 && item.deliveryMode === 1}}" 
+        catchtap="ship" 
+        hover-class="none"
+      >
+        发货
       </button>
     </view>
   </view>
