--- a/pages/subpages/mine/merchant/components/catering-shop/index.wxml
+++ b/pages/subpages/mine/merchant/components/catering-shop/index.wxml
@@ -25,7 +25,7 @@
       </view>
     </view>
   </view>
-  <button class="withdraw-btn" bindtap="withdraw" hover-class="none">收益提现</button>
+  <button class="withdraw-btn" wx:if="{{userInfo.cateringShopId === shopId}}" bindtap="withdraw" hover-class="none">收益提现</button>
 </view>
 
 <view class="tool-card">
