--- a/pages/subpages/mine/merchant/subpages/goods-refund/subpages/refund-search/index.wxml
+++ b/pages/subpages/mine/merchant/subpages/goods-refund/subpages/refund-search/index.wxml
@@ -40,43 +40,7 @@
 </view>
 
 <view class="list-wrap" wx:if="{{isSearching}}">
-  <view class="order-list" wx:if="{{type === 1}}">
-    <scenic-order-item 
-      wx:for="{{orderList}}" 
-      wx:key="index" 
-      item="{{item}}" 
-      index="{{index}}" 
-      bind:update="updateOrderList"
-    />
-  </view>
-  <view class="order-list" wx:if="{{type === 2}}">
-    <hotel-order-item 
-      wx:for="{{orderList}}" 
-      wx:key="index" 
-      item="{{item}}" 
-      index="{{index}}" 
-      bind:update="updateOrderList"
-    />
-  </view>
-  <view class="order-list" wx:if="{{type === 3}}">
-    <meal-ticket-order-item 
-      wx:for="{{orderList}}" 
-      wx:key="index" 
-      item="{{item}}" 
-      index="{{index}}" 
-      bind:update="updateOrderList"
-    />
-  </view>
-  <view class="order-list" wx:if="{{type === 4}}">
-    <set-meal-order-item 
-      wx:for="{{orderList}}" 
-      wx:key="index" 
-      item="{{item}}" 
-      index="{{index}}" 
-      bind:update="updateOrderList"
-    />
-  </view>
-  <view class="order-list" wx:if="{{type === 5}}">
+  <view class="order-list">
     <goods-order-item 
       wx:for="{{orderList}}" 
       wx:key="index" 
@@ -85,6 +49,6 @@
       bind:update="updateOrderList"
     />
   </view>
-  <empty-illus wx:if="{{!orderList.length}}" desc="暂无{{['景点', '酒店', '餐券', '套餐', '商品'][type - 1]}}订单" />
+  <empty-illus wx:if="{{!orderList.length}}" desc="暂无商品订单" />
   <view class="no-more-tips" wx:if="{{orderList.length}}">～没有更多啦～</view>
 </view>
