--- a/pages/subpages/mine/relative-product/index.wxml
+++ b/pages/subpages/mine/relative-product/index.wxml
@@ -1,13 +1,13 @@
 <view class="header">
   <view class="search-bar">
     <view class="search-content row">
-      <image class="search-icon" src="https://img.ubo.vip/mp/index/search/index-search.png" />
+      <image class="search-icon" src="https://static.tiddler.cn/mp/search/search.png" />
       <input class="search-input"
         value="{{keywords}}" bindinput="setKeywords" bindconfirm="search" 
         placeholder="请输入搜索关键字" type="text" confirm-type="search" 
       />
       <view class="cancel-btn" wx:if="{{keywords}}" bindtap="cancelSearch">
-        <image class="cancel-icon" src="https://img.ubo.vip/mp/search/clear-search.png" />
+        <image class="cancel-icon" src="https://static.tiddler.cn/mp/search/clear.png" />
       </view>
       <button class="search-btn" bindtap="search">搜索</button>
     </view>
