--- a/pages/subpages/home/media/components/feature-popup/index.wxml
+++ b/pages/subpages/home/media/components/feature-popup/index.wxml
@@ -1,11 +1,11 @@
 <popup bind:hide="hide">
   <view class="more-feature-popup">
     <view class="feature-btn" bindtap="togglePrivate">
-      <image class="feature-icon" src="https://img.ubo.vip/youlian/more-modal/{{isPrivate ? 'cancle-' : ''}}private.png" />
+      <image class="feature-icon" src="https://static.tiddler.cn/mp/media_item/{{isPrivate ? 'cancle-' : ''}}private.png" />
       <view class="feature-desc">{{isPrivate ? '取消私密' : '设置私密'}}</view>
     </view>
     <view class="feature-btn" bindtap="delete">
-      <image class="feature-icon" src="https://img.ubo.vip/youlian/more-modal/delete.png" />
+      <image class="feature-icon" src="https://static.tiddler.cn/mp/media_item/delete.png" />
       <view class="feature-desc">删除</view>
     </view>
   </view>
