--- a/pages/subpages/home/media/live/live-notice/index.wxml
+++ b/pages/subpages/home/media/live/live-notice/index.wxml
@@ -5,7 +5,7 @@
 
   <view class="nav-bar row" style="margin-top: {{statusBarHeight}}px;">
     <view class="nav-bar-btn row between">
-      <image class="nav-back-icon" bindtap="navBack" src="https://img.ubo.vip/mp/i-back-icon/back-icon.png" />
+      <image class="nav-back-icon" bindtap="navBack" src="https://static.tiddler.cn/mp/live/back_icon.png" />
       <image class="share-icon" bindtap="navBack" src="./images/share.png" />
     </view>
   </view>
