--- a/pages/subpages/mall/goods/subpages/goods-detail/components/shop-showcase/index.wxml
+++ b/pages/subpages/mall/goods/subpages/goods-detail/components/shop-showcase/index.wxml
@@ -2,7 +2,7 @@
   <view class="shop-info">
     <view class="avatar-wrap">
       <image class="shop-logo" src="{{shopInfo.logo}}" />
-      <image class="enterprise-label" wx:if="{{shopInfo.type === 2}}" src="https://img.ubo.vip/mp/selection/goods-detail/firm-icon.png" />
+      <image class="enterprise-label" wx:if="{{shopInfo.type === 2}}" src="https://static.tiddler.cn/mp/mine/firm-icon.png" />
     </view>
     <view class="name omit">{{shopInfo.name}}</view>
     <view class="check-btn" bindtap="navToShop">进入店铺</view>
