--- a/pages/subpages/notice/public-news/index.wxml
+++ b/pages/subpages/notice/public-news/index.wxml
@@ -5,7 +5,7 @@
       <view class="list-main-wrap" ontap="navTo" data-info="{{item.push_extras_value}}">
         <view class="list-status-wrap">
           <view class="list-status {{item.is_new != 0 ? 'unread' : ''}}">{{item.push_title}}</view>
-          <image wx:if="{{item.push_extras_value}}" style="width: 20rpx; height: 20rpx;" src="https://img.ubo.vip/mp/mine/right-arrow.png" />
+          <image wx:if="{{item.push_extras_value}}" style="width: 20rpx; height: 20rpx;" src="/images/arrow_gray.png" />
         </view>
         <view class="list-desc">{{item.push_content}}</view>
       </view>
