--- a/pages/tab-bar-pages/notice/index.wxss
+++ b/pages/tab-bar-pages/notice/index.wxss
@@ -56,9 +56,7 @@
   width: 80rpx; 
   height: 80rpx;
   border-radius: 50%;
-  background-image: url('https://img.ubo.vip/mp/default-ubo-icon.png');
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background: #f5f6f8;
 }
 .news-list-content {
   display: flex;
