--- a/pages/subpages/mine/order/components/goods-order-item/index.wxml
+++ b/pages/subpages/mine/order/components/goods-order-item/index.wxml
@@ -19,7 +19,7 @@
     </view>
   </view>
   <view class="list-content">
-    <goods-list list="{{item.goodsList || []}}" />
+    <goods-item wx:for="{{item.goodsList}}" wx:key="index" wx:for-item="goods" item="{{goods}}" />
   </view>
   <view class="list-footer">
     <view class="total-info row baseline">
