--- a/pages/subpages/mine/merchant/subpages/goods-refund/subpages/refund-search/index.wxml
+++ b/pages/subpages/mine/merchant/subpages/goods-refund/subpages/refund-search/index.wxml
@@ -46,6 +46,7 @@
       wx:key="index" 
       item="{{item}}" 
       index="{{index}}" 
+      shopId="{{shopId}}"
       bind:update="updateOrderList"
     />
   </view>
