--- a/pages/subpages/mine/merchant/subpages/order-search/index.wxml
+++ b/pages/subpages/mine/merchant/subpages/order-search/index.wxml
@@ -46,6 +46,7 @@
       wx:key="index" 
       item="{{item}}" 
       index="{{index}}" 
+      shopId="{{shopId}}"
       bind:update="updateOrderList"
     />
   </view>
@@ -55,6 +56,7 @@
       wx:key="index" 
       item="{{item}}" 
       index="{{index}}" 
+      shopId="{{shopId}}"
       bind:update="updateOrderList"
     />
   </view>
@@ -64,6 +66,7 @@
       wx:key="index" 
       item="{{item}}" 
       index="{{index}}" 
+      shopId="{{shopId}}"
       bind:update="updateOrderList"
     />
   </view>
@@ -73,6 +76,7 @@
       wx:key="index" 
       item="{{item}}" 
       index="{{index}}" 
+      shopId="{{shopId}}"
       bind:update="updateOrderList"
     />
   </view>
@@ -82,6 +86,7 @@
       wx:key="index" 
       item="{{item}}" 
       index="{{index}}" 
+      shopId="{{shopId}}"
       bind:update="updateOrderList"
     />
   </view>
