--- a/pages/subpages/mine/merchant/subpages/goods-refund/components/refund-item/index.wxml
+++ b/pages/subpages/mine/merchant/subpages/goods-refund/components/refund-item/index.wxml
@@ -45,7 +45,7 @@
       <button 
         class="btn active" 
         wx:if="{{item.status === 2}}" 
-        catchtap="checkShpping" 
+        catchtap="checkShippingInfo" 
         hover-class="none"
       >
         查看物流
