--- a/pages/subpages/mine/components/goods-item/index.wxss
+++ b/pages/subpages/mine/components/goods-item/index.wxss
@@ -1,6 +1,7 @@
 .goods-item {
   margin-bottom: 24rpx;
 }
+
 .goods-img {
   margin-right: 18rpx;
   width: 184rpx;
@@ -35,9 +36,10 @@
 }
 .count-wrap {
   font-size: 24rpx;
-  color: #999;
+  color: var(--blue-1);
 }
 .count {
   margin-left: 5rpx;
   font-size: 28rpx;
+  font-weight: 500;
 }
