--- a/pages/subpages/mine/merchant/subpages/goods-order/subpages/order-detail/index.wxml
+++ b/pages/subpages/mine/merchant/subpages/goods-order/subpages/order-detail/index.wxml
@@ -70,7 +70,7 @@
   </view>
 
   <view class="card">
-    <goods-item wx:for="{{orderInfo.goodsList}}" wx:key="index" item="{{item}}" />
+    <goods-item wx:for="{{orderInfo.goodsList}}" wx:key="index" item="{{item}}" navigable />
     <view class="list row between">
       <view class="title">商品总价</view>
       <price-unit price="{{orderInfo.goodsPrice || 0}}" color="#333" fontSize="20rpx" integerFontSize="28rpx" />
