--- a/pages/subpages/mine/order/subpages/goods-order/order-detail/components/goods-item/index.wxml
+++ b/pages/subpages/mine/order/subpages/goods-order/order-detail/components/goods-item/index.wxml
@@ -1,5 +1,5 @@
 <view class="goods-item">
-  <view class="row" bindtap="navToGoodsDetail" data-id="{{item.goodsId}}">
+  <view class="row" bindtap="navToGoodsDetail">
     <image class="goods-img" src="{{item.cover}}" mode="aspectFill" lazy-load />
     <view class="goods-content">
       <view class="goods-name omit">{{item.name}}</view>
